--- a/assets/jquery-idletimer/demos/autologout.html
+++ b/assets/jquery-idletimer/demos/autologout.html
@@ -8,15 +8,18 @@
     <title>Jquery-idletimer</title>
 
     <!-- jQuery and idleTimer -->
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="../src/idle-timer.js"></script>
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script> -->
 
     <!-- Bootstrap/respond (ie8) and moment -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+<!--     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.js"></script> -->
 
+    <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
+    <script src="../../jquery/jquery.js"></script>
+    <script type="text/javascript" src="../src/idle-timer.js"></script>
+    
     <!-- Respond.js proxy on external server -->
     <link href="//netdna.bootstrapcdn.com/respond-proxy.html" id="respond-proxy" rel="respond-proxy" />
     <link href="respond.proxy.gif" id="respond-redirect" rel="respond-redirect" />
